# bob

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
bob-cli/: Cargo.toml
bob-cli/dockerfiles/: _README.md  csharp.Dockerfile  pyinstaller.Dockerfile  rust.Dockerfile
bob-cli/dockerfiles/csharp/: linux-x86_64.Dockerfile
bob-cli/dockerfiles/pyinstaller/: linux-x86_64.Dockerfile  windows-x86_64.Dockerfile
bob-cli/src/: buildinfo.rs  config.rs  diff.rs  main.rs
bob-cli/src/split/: mod.rs
bob-lib/: Cargo.toml
bob-lib/src/: diff.rs  lib.rs
dockerfiles/: _README.md  pyinstaller.Dockerfile  rust.Dockerfile
src/: builder.rs  buildinfo.rs  config.rs  main.rs
src/ci/: mod.rs
src/diff/: mod.rs
