[package]
name = "bob-cli"
version.workspace = true
edition = "2024"
license-file = "../LICENSE"
repository = "https://github.com/swz-git/bob"
description = "Build tool for the rlbot v5 botpack"

[[bin]]
name = "bob"
path = "src/main.rs"

[dependencies]
bob-lib = { path = "../bob-lib" }
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.6"
glob = "0.3.2"
ignore = "0.4.23"
infer = "0.19.0"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
tar = "0.4.42"
tinytemplate = "1.2.1"
toml = "0.9.8"
toml-datetime-compat = { version = "0.3.0", features = [
    "chrono",
    "serde_with",
] }
serde-value = "0.7.0"
erased-serde = "0.4.6"
