[package]
name = "bob-lib"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
bidiff = "1.0.0"
bipatch = "1.0.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }
rayon = "1.10.0"
rkyv = "0.8.10"
rapidhash = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
log = { workspace = true }
